# goit_web_hw_07

./: README.md  alembic.ini  data_generator.py  docker-compose.yaml  env-example.txt  pyproject.toml  query_maker.py  requirements.txt
alembic/: env.py
alembic/versions/: 6b5c6a6a7ba1_initial_revision.py
creator/: datum.py  structure.py
